--- a/Index_style.css
+++ b/Index_style.css
@@ -253,7 +253,7 @@
     
       nav li:hover {
         
-       font-family: bebas kai regular;
+      font-family: BebasKai;
           
       
        color: white;
