--- a/Index_style.css
+++ b/Index_style.css
@@ -871,7 +871,7 @@
     }
 
 
-    @media only screen and (max-width: 1300px) { 
+    @media  (max-width: 1200px) { 
 
         .linha1 {
             display:none;
@@ -887,12 +887,46 @@
             width: 90%;
         }
 
-        li{
+       
+    }
 
-            font-size: 4em;
+    @media (max-width: 992px) {
+
+        .logo-header {
+        
+            width: 25em;
+            
+      
+        }
+        
+    
+        .foto-perfil {
+
+
+            width: 13em;
+        }    
+
+        header{ 
+
+            height: 50vh;
         }
 
-       
+        nav li {
+
+            font-size: 8em;
+        }
+
+        .first-article .button {
+
+            font-size: 8em;
+            bottom: -1em;
+
+      
+    }
+
+    @media (max-width: 768px) {
+
+        
     }
 
     
