--- a/Index_style.css
+++ b/Index_style.css
@@ -75,8 +75,9 @@
         background-size: cover;
         
     
-        height: 90vh;
+        height: auto;
         padding-top: 10em;
+        padding-bottom: 10em;
         position: relative;
         z-index: 2; 
   
@@ -908,7 +909,7 @@
 
         header{ 
 
-            height: 50vh;
+            height: auto;
         }
 
         nav li {
@@ -916,13 +917,19 @@
             font-size: 8em;
         }
 
+       
         .first-article .button {
 
             font-size: 8em;
             bottom: -1em;
 
-      
     }
+        .second-article .button {
+
+        font-size: 8em;
+        bottom: -1em;
+
+}
 
     @media (max-width: 768px) {
 
