--- a/Index_style.css
+++ b/Index_style.css
@@ -366,16 +366,13 @@
         
         content: "";
         position: absolute;
-        bottom: 0;
+        bottom: top;
         left: 2.5em;
         width: 10px;
         height: 10px;
-        border-bottom: 2px solid gray;
-        border-right: 2px solid gray;
-        
-        
-        
-        
+        border-bottom: 2px solid #e3e3e3;
+        border-right: 2px solid #e3e3e3;
+     
     }
     
   
@@ -592,6 +589,20 @@
         right:0;
   
     }
+
+    .second-article h1:before {
+        
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -.4em;
+        width: 10px;
+        height: 10px;
+        border-bottom: 2px solid #e3e3e3;
+        border-left: 2px solid #e3e3e3;
+     
+    }
+    
     
   
       .second-article  h2 {
@@ -877,12 +888,12 @@
 
         position: fixed;
         top: 40em;
-        right: 15em;
+        right: 10em;
      
     }
 
 
-    @media  (max-width: 1200px) { 
+    @media  (max-width: 1260px) { 
 
         
 
@@ -900,10 +911,20 @@
             width: 90%;
         }
 
+        .stickhome img{
+        
+            display: none;
+         
+        }
+
        
     }
 
-    @media (max-width: 1260px) {
+    @media (max-width: 1200px) {
+
+        .stickhome {
+            display: none;
+        }
 
         .logo-header {
         
@@ -1049,6 +1070,7 @@
             top: 0;
             font-size: 2em;
         }
+
 
         .stickhome img{
         
