--- a/Index_style.css
+++ b/Index_style.css
@@ -61,8 +61,8 @@
 
     header {
         
-        background: rgb(0,0,0); 
-        background: linear-gradient(180deg, rgba(0,0,0, 50%) 55%, rgba(30,32,34,50%) 91%), url(Imagens/grids4.png);
+        background: #111111;
+        background: url(Imagens/grid5.svg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -281,13 +281,13 @@
       nav li a{
         
        text-decoration: none;
-       color: black;
+       color:#111111;;
        
 
     }
       nav li a:visited{
         
-       color: black;
+       color:#111111;;
        
 
     }
@@ -352,6 +352,7 @@
       .first-article h1 {
         
         font-family: BebasKai;
+        color: #111111;
         font-size: 12em;
         position: absolute;
         top:0;
@@ -443,7 +444,7 @@
     .first-article p:before {
         
         content: "";
-        background-color: black;
+        background-color: #111111;
         height: 7em;
         width: 2px;
         position: absolute;
@@ -512,7 +513,7 @@
     }
     
     a:visited {
-        color: black;
+        color: #111111;
     }
     
     a:hover {
@@ -524,7 +525,7 @@
     
       border: none;
       background-color: white;
-      color: black;
+      color: #111111;
       font-size: 4em;
       cursor: crosshair;
       font-family: BebasKai;
@@ -583,6 +584,7 @@
       .second-article h1 {
         
         font-family: BebasKai;
+        color: #111111;
         font-size: 12em;
         position: absolute;
         top:0;
@@ -658,7 +660,7 @@
     .second-article p:before {
         
         content: "";
-        background-color: black;
+        background-color: #111111;
         height: 7em;
         width: 2px;
         position: absolute;
@@ -724,7 +726,7 @@
     
       border: none;
       background-color: white;
-      color: black;
+      color: #111111;
       font-size: 4em;
       cursor: crosshair;
       font-family: BebasKai;
@@ -1120,7 +1122,7 @@
 
         footer {
 
-            background-color: black;
+            background-color: #111111;
             background-image: none;
         }
 
