--- a/Index_style.css
+++ b/Index_style.css
@@ -896,6 +896,15 @@
 
 
 
+    #menu {
+        background-color: red;
+        width: 100%;
+        height: 50px;
+        position: fixed;
+        z-index: 5000;
+        visibility: hidden;
+        transition-duration: 0.5s;
+    }
 
 
 
