--- a/Index_style.css
+++ b/Index_style.css
@@ -886,12 +886,12 @@
     .stickhome img{
         
         width: 3em;
-        display: block;
-
+        visibility: hidden;
+        opacity: 0;
         position: fixed;
-        top: 40em;
+        top: 0em;
         right: 10em;
-     
+        transition:1s;
     }
 
 
