--- a/Index_style.css
+++ b/Index_style.css
@@ -327,10 +327,11 @@
     
       .first-article {
         
+        border: 1px red solid;
         width: 70%;
-        height: 60em;
+        height: 55em;
         margin: auto;
-        margin-top: 8em;
+        margin-top: 9em;
         margin-bottom: 20em;
         position: relative;
 
@@ -530,6 +531,7 @@
       cursor: crosshair;
       font-family: BebasKai;
         
+        margin-bottom: 1em;
         position: absolute;
         right: 0;
         bottom:0;
@@ -560,7 +562,7 @@
         
      
         width: 70%;
-        height: 60em;
+        height: 55em;
         margin: auto;
         margin-top: 9em;
         margin-bottom: 20em;
@@ -731,6 +733,7 @@
       cursor: crosshair;
       font-family: BebasKai;
         
+        margin-bottom: 1em;
         position: absolute;
         left: 0;
         bottom: 0em;
@@ -896,7 +899,7 @@
 
 
 
-    #menu {
+    /* #menu {
         background-color: red;
         width: 100%;
         height: 50px;
@@ -904,7 +907,7 @@
         z-index: 5000;
         visibility: hidden;
         transition-duration: 0.5s;
-    }
+    } */
 
 
 
@@ -1110,9 +1113,16 @@
         }
 
        
-    
+        .first-article, .second-article {
+
+            height: 60em;
+
+
+        }
+
         .first-article .button, .second-article .button {
 
+          
          font-size: 6em;
          bottom: 0em;
 
