--- a/Index_style.css
+++ b/Index_style.css
@@ -327,7 +327,7 @@
     
       .first-article {
         
-        border: 1px red solid;
+        border: 1px blue solid;
         width: 70%;
         height: 55em;
         margin: auto;
