--- a/Index_style.css
+++ b/Index_style.css
@@ -281,13 +281,13 @@
       nav li a{
         
        text-decoration: none;
-       color:#111111;;
+       color:black;
        
 
     }
       nav li a:visited{
         
-       color:#111111;;
+       color:black;
        
 
     }
