--- a/Index_style.css
+++ b/Index_style.css
@@ -1140,7 +1140,7 @@
 
         .first-article .button, .second-article .button {
 
-          
+            font-size: 6em;
             margin-bottom: 0;
             bottom: 0;
    
