--- a/branding_style.css
+++ b/branding_style.css
@@ -137,3 +137,80 @@ clear: both;
 
 
 
+
+@media only screen and (max-width: 800px) {
+
+.responsive {
+width: 100%;
+  
+}
+  
+
+main {
+    
+    width: 100%;
+    padding: 0em;
+    
+}
+
+   .desc{
+       
+       
+    
+     display: inline-block;
+     height:100%;
+     padding: 10em 0 4em 0;
+       
+             
+     
+}
+ 
+    
+   h2{
+    
+    font-family: Bebas kai;
+    text-align: center;
+    font-size: 5em;
+    margin: 0;
+     
+    
+}
+    
+
+  h3{
+    font-family: Bebas kai;
+    font-size: 4em;
+    color: #c3c3c3;
+    margin: 0;
+  
+}    
+    
+    
+   h4 {
+    
+    font-family: 'Cairo', sans-serif;
+    line-height: 1.4em;
+    font-size: 3em;
+    color: gray;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    
+
+}
+    
+     h4:after {
+    
+    content: "";
+    display: none;
+         
+}
+    
+     .invisiblespace {
+    display: none;
+    
+} 
+    
+    
+    
+}    
