--- a/branding_style.css
+++ b/branding_style.css
@@ -49,13 +49,12 @@ main {
 }
 
 p {
-    font-size: 1.5em;
+    font-size: 2em;
     line-height: 1.4em;
-    margin-left: 1em;
     text-align: left;
-    width: 100%;
-    margin: 1em auto ;
-    transform: translate(1.3em, 0em);
+    width: 95%;
+    margin: 1em auto;
+    transform: translate(.4em, 0em);
     font-family: 'Cairo', sans-serif;
     position: relative;
 }
@@ -64,10 +63,10 @@ p:before {
     content: "";
         background-color: rgb(170, 170, 170);
         height: 100%;
-        width: 2px;
+        width: 1px;
         position: absolute;
         top: 0;
-        left:-1em;
+        left:-1.1em;
 }
 
 h2 {
@@ -110,18 +109,64 @@ h3{
 
     width: 100%;
     margin: 4px 0;
-    
-     
+ 
  }
 
+ @media (max-width: 1300px) {
+
+    
+    p {
+        font-size: 1.5em;
+    }
+}
 
 
-@media only screen and (max-width: 750px) {
+
+@media (max-width: 800px) {
+
+    
+    p {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 660px) {
+
+    
+    h2 {
+ 
+       font-size: 7em;
+    }
+
+    h3 {
+ 
+        font-size: 3em;
+     }
+}
+
+@media (max-width: 660px) {
 
     .container {
-        
+
+        width:100%;
         display: flex;
         flex-direction: column;
+    
+    }
+
+    .col1, .col2 {
+
+        margin: 0;
     }
     
-}    
+    h2 {
+ 
+       font-size: 5em;
+    }
+
+    h3 {
+ 
+        font-size: 2em;
+        margin: -15px 0 0 0  ;
+     }
+}
