--- a/branding_style.css
+++ b/branding_style.css
@@ -117,6 +117,7 @@ h3{
     
     p {
         font-size: 1.5em;
+        width: 100%;
     }
 }
 
@@ -131,7 +132,7 @@ h3{
 
      h3 {
  
-        font-size: 3em;
+        font-size: 3sem;
      }
     
     p {
@@ -154,6 +155,20 @@ h3{
 }
 
 @media (max-width: 660px) {
+
+    main {
+        width: 95%;
+        margin: auto;
+     
+     }
+
+     p {
+         transform: none;
+     }
+
+     p:before {
+         display: none;
+     }
 
     .container {
 
