--- a/branding_style.css
+++ b/branding_style.css
@@ -21,7 +21,7 @@ header {
     height: 6em;
     justify-content:center;
     align-content: center;
-    margin-bottom: 10em;
+
 }
 
 header a {
@@ -35,6 +35,7 @@ header a {
 main {
    width: 70%;
    margin: auto;
+   padding-top: 10em;
 
 }
 
@@ -146,6 +147,7 @@ h3{
     h2 {
  
        font-size: 7em;
+       transform: translate(-2px, 0);
     }
 
     h3 {
