--- a/branding_style.css
+++ b/branding_style.css
@@ -55,7 +55,7 @@ p {
     text-align: left;
     width: 95%;
     margin: 1em 0;
-    transform: translate(.4em, 0em);
+    transform: translate(1.2em, 0em);
     font-family: 'Cairo', sans-serif;
     position: relative;
 }
@@ -67,13 +67,14 @@ p:before {
         width: 1px;
         position: absolute;
         top: 0;
-        left:-1.1em;
+        left:-1em;
 }
 
 h2 {
     
     font-family: BebasKai;
     font-size: 10em;
+    transform: translate(-3px, 0);
     margin: 0;
    
     
